--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,14 @@
 	height: 150px;
 	position: relative;
 }
+
+*, body, .item {
+	background-color: #000;
+	border-color: #333;
+	color: #fff;
+}
+
+.button {
+	color: #fff;
+	background-color: #222;
+}
