--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,7 +8,7 @@
 	position: relative;
 }
 
-*, body, .item {
+*, body, .item, .bar {
 	background-color: #000;
 	border-color: #333;
 	color: #fff;
@@ -42,3 +42,7 @@
 .between {
 	color: #777
 }
+
+.input-label { color: #fff;}
+
+h1, h2, h3, h4 { color: #fff;}
