--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,17 +1,18 @@
 /* Empty. Add your own CSS if you like */
 
 .ongoing { 
-font-size: 80px;
-line-height: 80px;
-text-align: center;
-margin-top: 40px;
+  font-size: 80px;
+  line-height: 80px;
+  text-align: center;
+  margin-top: 40px;
 }
 
 
 .supplier {
 	width: 100%;
 	height: 150px;
-	position: relative;
+  position: relative; 
+  color: aqua;
 }
 
 *, body, .item, .bar {
@@ -27,11 +28,11 @@ margin-top: 40px;
 
 .button-round {
 	border-radius: 50px;
-    border-width: 2px;
-    width: 130px;
-    height: 46px;
-    line-height: 46px;
-    font-size: 21px;
+  border-width: 2px;
+  width: 130px;
+  height: 46px;
+  line-height: 46px;
+  font-size: 21px;
 }
 
 .selected {
@@ -41,13 +42,19 @@ margin-top: 40px;
 
 .suppliers {
 	text-align: center;
-    padding: 8px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+  padding: 8px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .between {
-	color: #777
+  color: aqua;
+  background-color: rgb(31, 31, 31);
+  border-radius: 100px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .input-label { color: #fff;}
@@ -57,16 +64,24 @@ h1, h2, h3, h4 { color: #fff;}
 .loader {text-align: center; line-height: 26px}
 
 .timeSinceLast {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 	color: darkgray;
 }
 
 .time {
-    color: aqua;
+  color: aqua;
 }
 
 .day {
-    text-align: center;
+  text-align: center;
 	margin: 10px;
+}
+.times {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.durations {
+  text-align: center;
 }
