Background on betweeners and skipping betweeners when no data is provided

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -54,6 +54,9 @@ wn CSS if you like */
 
 .between {
   color: aqua;
+  background-color: #222;
+  padding: 2px 8px;
+  border-radius: 4px;
 }
 
 .input-label { color: #fff;}
