--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,7 @@ wn CSS if you like */
   line-height: 24px;
   text-align: center;
   display: inline-block;
+  font-size: 14px;
 }
 
 *, body, .item, .bar {
@@ -57,6 +58,7 @@ wn CSS if you like */
   background-color: #222;
   padding: 2px 8px;
   border-radius: 4px;
+  font-size: 16px;
 }
 
 .input-label { color: #fff;}
@@ -83,11 +85,12 @@ h1, h2, h3, h4 { color: #fff;}
 .times {
   margin-left: 20px;
   margin-right: 20px;
+  font-size: 18px;
 }
 
 .durations {
   text-align: center;
-  margin: 1em 0;
+  margin: 0.4em 0;
 }
 
 .starttime {
