--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,6 +11,7 @@ wn CSS if you like */
 
 .supplier {
   border: 1px solid white;
+  background-color: white;
   border-radius: 50%;
   font-weight: bold;  
   width: 26px;
@@ -18,6 +19,7 @@ wn CSS if you like */
   line-height: 24px;
   text-align: center;
   display: inline-block;
+  color: black;
 }
 
 *, body, .item, .bar {
@@ -76,10 +78,12 @@ h1, h2, h3, h4 { color: #fff;}
 .day {
   text-align: center;
 	margin: 10px;
+  text-transform: uppercase;
 }
+
 .times {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .durations {
@@ -88,9 +92,16 @@ h1, h2, h3, h4 { color: #fff;}
 }
 
 .starttime {
-  color: darkgray;
+  color: white;
 }
 
 .endtime {
-  color: darkgray;
+  color: white;
+}
+
+.item-note {
+  float: right;
+  color: #aaa;
+  font-size: 14px;
+  line-height: 26px;
 }
