--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,3 +108,10 @@ h1, h2, h3, h4 { color: #fff;}
   font-size: 14px;
   line-height: 26px;
 }
+
+.verticalLine {
+  border-left: 1px solid aqua;
+  position: absolute;
+  height: 100%;
+  left: 12px;
+}
