--- a/www/css/style.css
+++ b/www/css/style.css
@@ -93,6 +93,10 @@ h1, h2, h3, h4 { color: #fff;}
   line-height: 26px;
 }
 
+.durations {
+  line-height: 42px;
+}
+
 .starttime {
   color: white;
   margin-left: 44px;
