--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,11 +1,12 @@
 /* Empty. Add your o
 wn CSS if you like */
 
-.ongoing { 
+.ongoing, .ongoing SPAN { 
   font-size: 80px;
   line-height: 80px;
   text-align: center;
   position: relative;
+  background-color: transparent;
 }
 
 
@@ -58,14 +59,17 @@ wn CSS if you like */
 }
 
 *, body, .item, .bar {
-	background-color: #000;
 	border-color: #333;
 	color: #fff;
 }
 
+body, .list, .pane {
+  background-color: #242730;
+}
+
 .button, .button:HOVER, .ion-waterdrop, .ion-stop {
 	color: #fff;
-	background-color: #222;
+	background-color: #242730;
 }
 
 .button-round {
@@ -76,18 +80,35 @@ wn CSS if you like */
   line-height: 46px;
   font-size: 21px;
   vertical-align: middle;
+  border-color: #06E0C6;
+  box-shadow: #222 0 0 28px;
 }
 
 .button-bottle {
-  width: 66px;
-  height: 66px;
-  line-height: 66px;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
   border-radius: 50%;
+  position: absolute;
+  margin-left: -45px;
+  z-index: 1;
+  margin-top: -10px;
+  box-shadow: #222 0 0 12px;
 }
 
-.selected {
-	border-width: 10px;
-	line-height: 30px;
+#breastL {
+  padding-right: 33px;
+}
+#breastR {
+  padding-left: 33px;
+}
+
+.selected, .selected:HOVER {
+  line-height: 30px;
+  /*background-color: #cc3;*/
+  background-color: #06E0C6;
+  color: black;
+  border-width: 0px;
 }
 
 .suppliers {
@@ -97,10 +118,11 @@ wn CSS if you like */
   margin-top: 30px;
   margin-bottom: 30px;
   line-height: 70px;
+  background-color: transparent;
 }
 
 .between {
-  color: aqua;
+  color: #FCC108;
   font-size: 18px;
   text-align: right;
   margin-right: 20px;
@@ -113,7 +135,7 @@ h1, h2, h3, h4 { color: #fff;}
 .loader {text-align: center; line-height: 26px}
 
 .time {
-  color: aqua;
+  color: #FCC108;
   font-size: 30px;
 }
 
@@ -141,10 +163,11 @@ h1, h2, h3, h4 { color: #fff;}
 .col .duration, .col .volume {
   font-size: 12px;
   color: #999;
+  background-color: transparent;
 }
 
 .verticalLine {
-  border-left: 1px solid aqua;
+  border-left: 1px solid #999;
   position: absolute;
   height: 100%;
   left: 50%;
@@ -164,13 +187,13 @@ h1, h2, h3, h4 { color: #fff;}
 .timeSinceLast .time, .timeSinceLast p {
   line-height: 10px;
 }
-.timeSinceLast p { color: darkgray ;}
+.timeSinceLast p { color: #999 ;}
 .timeSinceLast { height: 68px; text-align: center; }
 .timeSinceLast .verticalLine {
   margin-top: 10px;
 }
 
-.button-menu,.button-menu:HOVER { background-color: #000;}
+.button-menu,.button-menu:HOVER { background-color: transparent;}
 
 .row {padding: 0px;}
 .col {padding: 0px;}
@@ -182,3 +205,9 @@ h1, h2, h3, h4 { color: #fff;}
   text-align: center;
 }
 .newFeedingDuration input { width: 90% }
+
+.counter {
+  background-image: url("../img/blur.jpg");
+  padding-bottom: 1px;
+  background-position: bottom;
+}
