--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,16 +63,16 @@ wn CSS if you like */
 	color: #fff;
 }
 
-body, .list, .pane {
+body, .list, .pane, .item, .menu {
   background-color: #242730;
 }
 
-.button, .button:HOVER, .ion-waterdrop, .ion-stop {
+.button, .button:HOVER {
 	color: #fff;
 	background-color: #242730;
 }
 
-.button-round {
+.button-round, .button-round:HOVER {
 	border-radius: 50px;
   border-width: 2px;
   width: 130px;
@@ -84,7 +84,7 @@ body, .list, .pane {
   box-shadow: #222 0 0 28px;
 }
 
-.button-bottle {
+.button-bottle, .button-bottle:HOVER {
   width: 90px;
   height: 90px;
   line-height: 90px;
@@ -173,17 +173,6 @@ h1, h2, h3, h4 { color: #fff;}
   left: 50%;
 }
 
-.megaDot {
-  background-color: white;
-  border-radius: 50%;
-  width: 13px;
-  height: 13px;
-  display: inline-block;
-  position: absolute;
-  top: 7px;
-  left: 16px;
-}
-
 .timeSinceLast .time, .timeSinceLast p {
   line-height: 10px;
 }
@@ -210,4 +199,23 @@ h1, h2, h3, h4 { color: #fff;}
   background-image: url("../img/blur.jpg");
   padding-bottom: 1px;
   background-position: bottom;
+}
+
+.popup {
+  background-color: #242730;
+}
+
+.item-input {
+  padding: 10px 0px;
+  border: none;
+}
+.range input {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.range-positive {
+  border: 0px;
+}
+.item-select select {
+  color: #fff;
 }
