--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,6 +1,3 @@
-/* Empty. Add your o
-wn CSS if you like */
-
 .ongoing, .ongoing SPAN { 
   font-size: 80px;
   line-height: 80px;
@@ -20,7 +17,6 @@ wn CSS if you like */
 }
 .supplier {
   background-color: white;
-/*  border-radius: 19px;*/
   font-weight: bold;  
   width: 29px;
   height: 29px;
@@ -28,9 +24,6 @@ wn CSS if you like */
   text-align: center;
   display: inline-block;
   color: black;
-/*  position: absolute;
-  top: 0px;
-  left: 0px;*/
 }
 
 .supplierL {
@@ -63,7 +56,7 @@ wn CSS if you like */
 	color: #fff;
 }
 
-body, .list, .pane, .item, .menu {
+body, .list, .pane, .item, .menu, .bar, .scroll-content {
   background-color: #242730;
 }
 
@@ -105,7 +98,6 @@ body, .list, .pane, .item, .menu {
 
 .selected, .selected:HOVER {
   line-height: 30px;
-  /*background-color: #cc3;*/
   background-color: #06E0C6;
   color: black;
   border-width: 0px;
@@ -197,8 +189,9 @@ h1, h2, h3, h4 { color: #fff;}
 
 .counter {
   background-image: url("../img/blur.jpg");
-  padding-bottom: 1px;
+  overflow: auto;
   background-position: bottom;
+  background-repeat: no-repeat;
 }
 
 .popup {
@@ -218,4 +211,11 @@ h1, h2, h3, h4 { color: #fff;}
 }
 .item-select select {
   color: #fff;
+}
+
+.sidemenu {
+  background-image: url("../img/menu-backdrop.png");
+}
+.sidemenu .list, .sidemenu .item {
+  background-color: transparent;
 }
