Side menu borders. Changed slightly

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -219,3 +219,6 @@ h1, h2, h3, h4 { color: #fff;}
 .sidemenu .list, .sidemenu .item {
   background-color: transparent;
 }
+.sidemenu .item {
+  border: 1px solid #464950;
+}
