Demo buttons stoped working

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -313,7 +313,7 @@ input[type="range"]::-webkit-slider-thumb:before {
 .settings {
   margin: 22px 0;
 }
-.item-toggle {
+.settings .item {
   border: 0px !important; 
 }
 .noicon {
