Updated ionic 1.0.0.beta8 -> 1.0.0.beta9

--- a/www/lib/ionic/scss/_scaffolding.scss
+++ b/www/lib/ionic/scss/_scaffolding.scss
@@ -69,7 +69,8 @@ body.grade-c {
   height: auto;
 }
 
-.scroll-content-false {
+.scroll-content-false,
+.menu .scroll-content.scroll-content-false{
   z-index: $z-index-scroll-content-false;
 }
 
