--- a/www/lib/ionic/scss/_items.scss
+++ b/www/lib/ionic/scss/_items.scss
@@ -595,26 +595,9 @@ button.item.item-button-right {
   // setup standard transition settings
   @include transition-duration( $item-edit-transition-duration );
   @include transition-timing-function( $item-edit-transition-function );
-  @include transition-property( none );
-}
-
-.item-left-editable .item-content {
-  // set transition property for an item just left editable
   -webkit-transition-property: -webkit-transform;
      -moz-transition-property: -moz-transform;
           transition-property: transform;
-}
-
-.item-right-editable .item-content {
-  // set transition property for an item just right editable
-  @include transition-property(margin-right);
-}
-
-.item-left-editable.item-right-editable .item-content {
-  // set transition property for an item that's both left/right editable
-  -webkit-transition-property: -webkit-transform, margin-right;
-     -moz-transition-property: -moz-transform, margin-right;
-          transition-property: transform, margin-right;
 }
 
 .list-left-editing .item-left-editable .item-content,
@@ -625,8 +608,8 @@ button.item.item-button-right {
 
 .list-right-editing .item-right-editable .item-content,
 .item-right-editing.item-right-editable .item-content {
-  // actively editing the right side of the item
-  margin-right: $item-right-edit-open-width;
+  // actively editing the left side of the item
+  @include translate3d(-$item-right-edit-open-width, 0, 0);
 }
 
 
@@ -634,8 +617,7 @@ button.item.item-button-right {
 // -------------------------------
 
 .item-left-edit {
-  @include transition(all $item-edit-transition-function $item-edit-transition-duration);
-  @include translate3d( $item-left-edit-left - $item-left-edit-open-width, 0, 0);
+  @include transition(all $item-edit-transition-function $item-edit-transition-duration / 2);
   position: absolute;
   top: 0;
   left: 0;
@@ -655,13 +637,21 @@ button.item.item-button-right {
       height: 100%;
     }
   }
-}
 
-.list-left-editing .item-left-edit,
-.item-left-editing .item-left-edit {
-  @include translate3d($item-left-edit-left, 0, 0);
+  display: none;
+  opacity: 0;
+  @include translate3d( ($item-left-edit-left - $item-left-edit-open-width) / 2, 0, 0);
+  &.visible {
+    display: block;
+    &.active {
+      opacity: 1;
+      @include translate3d($item-left-edit-left, 0, 0);
+    }
+  }
 }
-
+.list-left-editing .item-left-edit {
+  @include transition-delay($item-edit-transition-duration / 2);
+}
 
 // Item Delete (Left side edit button)
 // -------------------------------
@@ -680,12 +670,12 @@ button.item.item-button-right {
 // -------------------------------
 
 .item-right-edit {
-  @include transition(all $item-edit-transition-function $item-edit-transition-duration);
+  @include transition(all $item-edit-transition-function $item-edit-transition-duration / 2);
   position: absolute;
   top: 0;
   right: 0;
   z-index: 0;
-  width: $item-right-edit-open-width;
+  width: $item-right-edit-open-width *  1.5;
   height: 100%;
   background: inherit;
 
@@ -702,6 +692,20 @@ button.item.item-button-right {
       font-size: $item-reorder-icon-size;
     }
   }
+
+  display: none;
+  opacity: 0;
+  @include translate3d($item-right-edit-open-width / 2, 0, 0);
+  &.visible {
+    display: block;
+    &.active {
+      opacity: 1;
+      @include translate3d(0, 0, 0);
+    }
+  }
+}
+.list-right-editing .item-right-edit {
+  @include transition-delay($item-edit-transition-duration / 2);
 }
 
 
@@ -730,18 +734,6 @@ button.item.item-button-right {
 .item-placeholder {
   // placeholder for the item that's being reordered
   opacity: 0.7;
-}
-
-.item-left-edit.item-delete,
-.item-right-edit.item-reorder {
-  opacity: 1;
-  &.ng-hide {
-    opacity: 0;
-  }
-  &.ng-hide-add,
-  &.ng-hide-remove {
-    display: block !important;
-  }
 }
 
 
