--- a/www/css/style.css
+++ b/www/css/style.css
@@ -268,11 +268,12 @@ h1, h2, h3, h4 { color: #fff;}
   border: 1px solid #464950;
 }
 .sidemenu .version {
-  color: #06E0C6;
+  color: #999;
   font-size: 8px;
   position: absolute;
-  right:10px;
-  top: 0px;
+  bottom: 0px;
+  text-align: center;
+  width: 100%;
 }
 
 .ion-toggle-filled, .ion-toggle {
