--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -39,7 +39,7 @@ h1, h2 {
   font-family: 'Roboto Slab', serif;
 }
 
-h2, dt {
+h2, dt, footer {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
@@ -138,7 +138,9 @@ section#basics .img, section#nobloat .img  {
 }
 
 footer {
-  background-color: yellow;
+  background-color: #999;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 a.button {
